@@ -103,6 +103,7 @@ wesnoth_source = \
 	gui/auxiliary/window_builder/scrollbar_panel.cpp \
 	gui/auxiliary/window_builder/slider.cpp \
 	gui/auxiliary/window_builder/spacer.cpp \
+	gui/auxiliary/window_builder/stacked_widget.cpp \
 	gui/auxiliary/window_builder/text_box.cpp \
 	gui/auxiliary/window_builder/toggle_button.cpp \
 	gui/auxiliary/window_builder/vertical_scrollbar.cpp \
@@ -149,6 +150,7 @@ wesnoth_source = \
 	gui/widgets/scrollbar_panel.cpp \
 	gui/widgets/slider.cpp \
 	gui/widgets/spacer.cpp \
+	gui/widgets/stacked_widget.cpp \
 	gui/widgets/text.cpp \
 	gui/widgets/text_box.cpp \
 	gui/widgets/toggle_button.cpp \
